--- a/team.html
+++ b/team.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Team</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Baskervville&display=swap');
+    </style>
     <link rel="stylesheet" href="css/stylesheet.css">
-    <link rel="stylesheet" href="css/styleteam.css">
 </head>
 <body>
     
-<div class = "grid-team">
-    <header>
+<div class = "container-fluid">
+  <header class = "row">
         <div class = "container-fluid">
         <div class = "row">
         <nav class="navbar navbar-expand-sm navbar-light col-sm-12">
@@ -34,14 +35,46 @@
         </div>
         </div>
     </header>
+<div class = "row"><h1 class = "text-left">Team</h1></div>
+  
+  <div class = "row">
+    <div class = "col-sm">large image here</div>
+    <div class = "col-sm"><h2>Head of Lab</h2>
+    <p>bio of PI here</p></div>
+  </div>
 
-<div class = "title"><h1>Meet the Team</h1></div>
-<div class = "head"></div>
-<div class = "current"></div>
-<div class = "past"></div>
+  <div class = "row">
+    <h2 class = "text-center">Current Team</h2>
+    <div class = "col-sm">
+        <h3>Ph.D.</h3>
+    </div>
+    <div class = "col-sm">
+        <h3>Undergrad</h3>
+    </div>
+  </div>
 
 
-<footer class = "row">
+  <div class = "row">
+    <h2 class = "text-center mt-3">Past Members</h2>
+    <div  class = "row">
+        <div class = "col">img</div>
+        <div class = "col">bio</div>
+    <div  class = "row">
+      <div class = "col">img</div>
+      <div class = "col">bio</div>
+    </div>
+    <div  class = "row">
+      <div class = "col">img</div>
+      <div class = "col">bio</div>
+    </div>
+    <div  class = "row">
+      <div class = "col">img</div>
+        <div class = "col">bio</div>
+    </div>
+  </div>
+
+
+
     <div class="container">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
           <div class="col-md-4 d-flex align-items-center">
@@ -58,7 +91,7 @@
           </ul>
         </footer>
       </div>
-</footer>
+
 
 
 </div>
