--- a/projects.html
+++ b/projects.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Baskervville&display=swap');
+      </style>
     <link rel="stylesheet" href="css/stylesheet.css">
-    <link rel="stylesheet" href="css/styleprojects.css">
 </head>
 <body>
 
@@ -35,7 +36,7 @@
     </div>
 </header>
 
-<div class = "row"><h1 class = "text-center">Projects</h1></div>
+<div class = "row"><h1 class = "text-left">Projects</h1></div>
 
 <div class = "row mb-5 mt-4">
     <div class = "col-sm-5">img</div>
