update - projects to research

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo2">
                     <ul class="navbar-nav  ms-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="projects.html">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="research.html">Research</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="team.html">Team</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="contact.html">Contact</a></li>
                     </ul>
@@ -57,7 +57,7 @@
 
     <div class = "row">
         <h2  class="text-center mt-4">About</h2>
-        <p class="text-center">filler text</p>
+        <p class="text-center">The Interactive Robotics and Novel Technologies (IRON) Laboratory is a research group at the University of Colorado Boulder that studies human-robot interaction (HRI) and human-computer interaction (HCI). The lab is housed within the ATLAS Institute and serves as an interdisciplinary focal point for researchers with a variety of backgrounds, including computer science, mechanical engineering, aerospace engineering, and creative technologies and design. Our main focus is improving human-robot teaming through the development of new algorithms, interfaces, and robotic technologies. Please see the Research page for more information about our work or click below if you are interested in getting involved in the lab.</p>
     </div>
 
     <div class = "row">
