--- a/team.html
+++ b/team.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Team</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Baskervville&display=swap');
     </style>
@@ -35,21 +36,32 @@
         </div>
         </div>
     </header>
-<div class = "row"><h1 class = "text-left">Team</h1></div>
+<div class = "row"><h1 class = "text-left">Meet the Team</h1></div>
   
   <div class = "row">
     <div class = "col-sm">large image here</div>
-    <div class = "col-sm"><h2>Head of Lab</h2>
+    <div class = "col-sm"><h2>Lab Director</h2>
     <p>bio of PI here</p></div>
   </div>
 
   <div class = "row">
-    <h2 class = "text-center">Current Team</h2>
     <div class = "col-sm">
-        <h3>Ph.D.</h3>
+      <h2>Ph.D.</h2>
+
+        <h3>Maitrey Gramopadhye</h3>
+          <p>phD Student</p>
+        <img class="img-fluid img-thumbnail" src="/headshots/Nicholas_Conlon.jpg" alt="headshot">
+        <h3>Nicholas Conlon</h3>
+          <p>phD Student</p>
+        <img class="img-fluid img-thumbnail" src="/headshots/Yang_Yue.jpg" alt="headshot">
+        <h4>Yang Yue</h4>
+          <p>phD Student</p>
     </div>
     <div class = "col-sm">
-        <h3>Undergrad</h3>
+      <h2>Undergrad</h2>
+        <h3>Lilly Nekervis</h3>
+        <p>Undergrad</p>
+
     </div>
   </div>
 
