--- a/team.html
+++ b/team.html
@@ -47,13 +47,13 @@
   <div class = "row">
     <div class = "col-sm">
       <h2>Ph.D.</h2>
-
+        <img src="Maitrey_Gramopadhye.jpeg" style="max-width:40%;" alt="" class="rounded">
         <h3>Maitrey Gramopadhye</h3>
           <p>phD Student</p>
-        <img class="img-fluid img-thumbnail" src="/headshots/Nicholas_Conlon.jpg" alt="headshot">
+          <img src="Nicholas_Conlon.jpg" style="max-width:40%;" alt="" class="rounded">
         <h3>Nicholas Conlon</h3>
           <p>phD Student</p>
-        <img class="img-fluid img-thumbnail" src="/headshots/Yang_Yue.jpg" alt="headshot">
+          <img src="Yang_Yue.jpg" style="max-width:40%;" alt="" class="rounded">
         <h4>Yang Yue</h4>
           <p>phD Student</p>
     </div>
