--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo2">
                 <ul class="navbar-nav  ms-auto mb-2 mb-lg-0">
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="research.html">research</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="research.html">Research</a></li>
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="team.html">Team</a></li>
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="contact.html">Contact</a></li>
                 </ul>
