--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
     <div class="carousel-item">
       <img class="d-block w-100" src="otter2.jpg" alt="Second slide">
     </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="group_labs_photo.jpg" alt="Third slide">
+    </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -61,7 +64,7 @@
 
     <div class = "row">
         <h2  class="text-center mt-4">About</h2>
-        <p class="text-center">The Interactive Robotics and Novel Technologies (IRON) Laboratory is a research group at the University of Colorado Boulder that studies human-robot interaction (HRI) and human-computer interaction (HCI). The lab is housed within the ATLAS Institute and serves as an interdisciplinary focal point for researchers with a variety of backgrounds, including computer science, mechanical engineering, aerospace engineering, and creative technologies and design. Our main focus is improving human-robot teaming through the development of new algorithms, interfaces, and robotic technologies. Please see the Research page for more information about our work or click below if you are interested in getting involved in the lab.</p>
+        <p class="text-center">The Interactive Robotics and Novel Technologies (IRON) Laboratory is a research group at the University of North Carolina at Chapel Hill partnered with the University of Colorado Boulder that studies human-robot interaction (HRI) and human-computer interaction (HCI). The lab is housed within Sitterson Hall and serves as an interdisciplinary focal point for researchers with a variety of backgrounds, including computer science, mechanical engineering, aerospace engineering, and creative technologies and design. Our main focus is improving human-robot teaming through the development of new algorithms, interfaces, and robotic technologies. Please see the Research page for more information about our work and if you are interested in getting involved in the lab.</p>
     </div>
 
     <div class = "row">
