Carousel sizing (work in progress)

--- a/index.html
+++ b/index.html
@@ -40,7 +40,13 @@
         </div>
 </div>
 
+<div class = "row">
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img class="d-block w-100" src="otter1.jpg" alt="First slide">
@@ -61,9 +67,11 @@
     <span class="sr-only"></span>
   </a>
 </div>
+</div>
+
 
     <div class = "row">
-        <h2  class="text-center mt-4">About</h2>
+        <h2  class="text-center mt-5">About</h2>
         <p class="text-center">The Interactive Robotics and Novel Technologies (IRON) Laboratory is a research group at the University of North Carolina at Chapel Hill partnered with the University of Colorado Boulder that studies human-robot interaction (HRI) and human-computer interaction (HCI). The lab is housed within Sitterson Hall and serves as an interdisciplinary focal point for researchers with a variety of backgrounds, including computer science, mechanical engineering, aerospace engineering, and creative technologies and design. Our main focus is improving human-robot teaming through the development of new algorithms, interfaces, and robotic technologies. Please see the Research page for more information about our work and if you are interested in getting involved in the lab.</p>
     </div>
 
