--- a/team.html
+++ b/team.html
@@ -37,31 +37,64 @@
         </div>
     </header>
 <div class = "row"><h1 class = "text-left">Meet the Team</h1></div>
-  
-  <div class = "row">
-    <div class = "col-sm">large image here</div>
-    <div class = "col-sm"><h2>Lab Director</h2>
-    <p>bio of PI here</p></div>
+<hr>
+
+<div class = "row"> 
+  <div class = "col"><h2>Lab Director</h2> 
+<div class="row pb-5">
+  <div class="col-md-3 text-center">
+    <img src="dan.jpg" style="max-width: 200px" class="rounded"></div>
+    <div class="col">
+      <h4> Daniel Szafir </h4>
+      <p>Dr. Daniel Szafir is an Assistant Professor in the Department of Computer Science and the ATLAS Institute at the University of Colorado, Boulder. He holds courtesy appointments in the Department of Aerospace Engineering Sciences and the Department of Information Science and is an affiliate of the CU Research and Engineering Center for Unmanned Vehicles (RECUV), the Institute of Cognitive Science (ICS), the Center for Neuroscience, and the Culture, Language, and Social Practice (CLASP) program. Dr. Szafirâ€™s research interests, which span the fields of human-robot interaction (HRI) and human-computer interaction (HCI), involve exploring how emerging interactive technologies, such as small aerial robots, wearable devices, and immersive virtual environments, may be designed to provide new forms of assistance to users in domains including collaborative work, education, and space exploration. He completed his Ph.D. in Computer Science at the University of Wisconsinâ€“Madison in 2015 and was named to the Forbes 30 Under 30: Science list in 2017. Dr. Szafirâ€™s work been featured in a variety of media outlets, including New Scientist, Engadget, and Discovery News, and his research collaborators and sponsors have included NASA, the National Science Foundation, Google, Intel, and Mitsubishi Heavy Industries.</p>
+      <a href="http://www.danszafir.com/" class="btn btn-primary btn-sm rounded-0 text-light">Website</a>
+      <a href="https://scholar.google.com/citations?user=WxmhtyMAAAAJ&amp;hl=en&amp;oi=sra" class="btn btn-primary btn-sm rounded-0 text-light">Google Scholar</a>
+    </div>
+
+
+<div class = "row"> 
+  <div class = "col"><h2>Graduate Students</h2> 
+</div>
+
+<div class="row pb-5">
+  <div class="col-md-3 text-center">
+    <img src="Maitrey_Gramopadhye.jpeg" style="max-width: 150px;" alt="" class="rounded">
+</div>
+    <div class="col">
+        <h4> Maitrey Gramopadhye </h4>
+        <p>I am currently a PhD student in the Computer Science Department at the University of North Carolina at Chapel Hill. My research interests include human robot interaction and common sense reasoning in robotics. I am particularly interested in improving the robot reasoning, using Language and Vision-Language Models, to enable human robot collaboration for long-horizon tasks. Recently, I have worked on conditioning large language models on the objects present around a robot to generate situationally aware action plans. In the past I have worked on studying the zero-shot performance of vision transformers for video object segmentation and pose propagation. I have worked on Graph Machine Learning as a researcher at AI Garage, Mastercard and I'm interested in finding ways to port my experience across fields to my current and future projects. I also interned at Samsung Research Institute, Bangalore where I worked in the Computer Vision team of the Advanced Technology Lab. I completed my Bachelors in Technology in Computer Science from the Indian Institute of Technology, Bombay where I worked on my Undergraduate thesis in the field of 3D Reconstruction in Cryogenic Electron Microscopy. I also was the Software team lead for The IIT Bombay Mars Rover Team, where I worked on building rovers capable of traversing on Mars like terrain."</p>
+          <a href="https://maitreygram.github.io" class="btn btn-primary btn-sm rounded-0 text-light">Website</a>
+          <a href="https://www.linkedin.com/in/maitrey-gramopadhye/" class="btn btn-primary btn-sm rounded-0 text-light">LinkedIn</a>
+          <a href="https://github.com/maitreygram" class="btn btn-primary btn-sm rounded-0 text-light">GitHub</a>
+</div>
+
+<div class="row pb-5">
+  <div class="col-md-3 text-center">
+    <img src="Nicholas_Conlon.jpg" style="max-width: 150px;" alt="" class="rounded">
+</div>
+    <div class="col">
+      <h4> Nicholas Conlon </h4>
+      <p>Nick is a PhD candidate in the Department of Computer Science at the University of Colorado at Boulder. In his research, he is developing methods for intelligent agents to assess their own competencies and investigating the impacts of communicating such assessments within a human-machine team. Prior to pursuing PhD, he worked in aerospace R&D developing algorithms and software for real-world applications including Uncrewed Aerial System (UAS) mission planning, battlespace decision-support, and space situational awareness. He also served several years in the United States Army Airborne Infantry. Nick received his B.S. in Computer Science from the University of Massachusetts at Amherst (2014), and his M.S. in Computer Science from the University of Massachusetts at Lowell (2018).</p>
+          <a href="https://www.linkedin.com/in/nicholas-conlon/" class="btn btn-primary btn-sm rounded-0 text-light">LinkedIn</a>
+      </div>
+
+<div class="row pb-5">
+    <div class="col-md-3 text-center"> <img src="Yang_Yue.jpg" style="max-width: 150px;" alt="" class="rounded"> </div>
+      <div class="col">
+          <h4> Yang_Yue </h4>
+          <p>"Yue Yang received his master degree in computer science in 2023 from Georgia Institute of Technology, and is now a Ph.D. student in computer science at the University of North Carolina at Chapel Hill. His research interests include human robot interaction, imitation learning, generative models."</p>
+            <a href="https://yy-gx.github.io/" class="btn btn-primary btn-sm rounded-0 text-light">Website</a>
+            <a href="https://www.linkedin.com/in/yue-yang-6a1493185/" class="btn btn-primary btn-sm rounded-0 text-light">LinkedIn</a>
+            <a href="https://github.com/yy-gx" class="btn btn-primary btn-sm rounded-0 text-light">GitHub</a>
+          </div>
+    </div>
   </div>
 
   <div class = "row">
     <div class = "col-sm">
-      <h2>Ph.D.</h2>
-        <img src="Maitrey_Gramopadhye.jpeg" style="max-width:40%;" alt="" class="rounded">
-        <h3>Maitrey Gramopadhye</h3>
-          <p>phD Student</p>
-          <img src="Nicholas_Conlon.jpg" style="max-width:40%;" alt="" class="rounded">
-        <h3>Nicholas Conlon</h3>
-          <p>phD Student</p>
-          <img src="Yang_Yue.jpg" style="max-width:40%;" alt="" class="rounded">
-        <h4>Yang Yue</h4>
-          <p>phD Student</p>
-    </div>
-    <div class = "col-sm">
-      <h2>Undergrad</h2>
-        <h3>Lilly Nekervis</h3>
-        <p>Undergrad</p>
-
+    <h2>Undergrad</h2>
+      <h3>Lilly Nekervis</h3>
+      <p>Undergrad</p>
     </div>
   </div>
 
