--- a/team.html
+++ b/team.html
@@ -40,7 +40,7 @@
 <hr>
 
 <div class = "row"> 
-  <div class = "col"><h2>Lab Director</h2> 
+  <div class = "col"><h2 class = "text-center">Lab Director</h2> 
 <div class="row pb-5">
   <div class="col-md-3 text-center">
     <img src="dan.jpg" style="max-width: 200px" class="rounded"></div>
@@ -53,11 +53,11 @@
 
 
 <div class = "row"> 
-  <div class = "col"><h2>Graduate Students</h2> 
+  <h2 class = "mt-5 pb-3 text-center">Graduate Students</h2> 
 </div>
 
 <div class="row pb-5">
-  <div class="col-md-3 text-center">
+  <div class="col-md-3 pb-4 text-center">
     <img src="Maitrey_Gramopadhye.jpeg" style="max-width: 150px;" alt="" class="rounded">
 </div>
     <div class="col">
@@ -68,8 +68,8 @@
           <a href="https://github.com/maitreygram" class="btn btn-primary btn-sm rounded-0 text-light">GitHub</a>
 </div>
 
-<div class="row pb-5">
-  <div class="col-md-3 text-center">
+<div class="row pb-5 mt-4 pt-2">
+  <div class="col-md-3 pb-4 text-center">
     <img src="Nicholas_Conlon.jpg" style="max-width: 150px;" alt="" class="rounded">
 </div>
     <div class="col">
@@ -78,10 +78,10 @@
           <a href="https://www.linkedin.com/in/nicholas-conlon/" class="btn btn-primary btn-sm rounded-0 text-light">LinkedIn</a>
       </div>
 
-<div class="row pb-5">
-    <div class="col-md-3 text-center"> <img src="Yang_Yue.jpg" style="max-width: 150px;" alt="" class="rounded"> </div>
+<div class="row pb-5 mt-4 pt-2">
+    <div class="col-md-3 pb-4 text-center"> <img src="Yang_Yue.jpg" style="max-width: 150px;" alt="" class="rounded"> </div>
       <div class="col">
-          <h4> Yang_Yue </h4>
+          <h4> Yang Yue </h4>
           <p>"Yue Yang received his master degree in computer science in 2023 from Georgia Institute of Technology, and is now a Ph.D. student in computer science at the University of North Carolina at Chapel Hill. His research interests include human robot interaction, imitation learning, generative models."</p>
             <a href="https://yy-gx.github.io/" class="btn btn-primary btn-sm rounded-0 text-light">Website</a>
             <a href="https://www.linkedin.com/in/yue-yang-6a1493185/" class="btn btn-primary btn-sm rounded-0 text-light">LinkedIn</a>
