--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
       </style>
     <link rel="stylesheet" href="css/stylesheet.css">
 </head>
+
 <body>
     <div  class = "container-fluid">
     <header>
@@ -45,9 +46,9 @@
           Sitterson Hall 
           University of North Carolina at Chapel Hill 
           232 S Columbia St, Chapel Hill, NC 27514</p></div>
-        <div class = "col-sm"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3231.506781409163!2d-79.05609498886935!3d35.91009361725372!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89acc33ab2f92819%3A0x6514a8d8d259c2be!2sSitterson%20Hall!5e0!3m2!1sen!2sus!4v1701368933313!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
     </div>
-
+<div class = "row">
+<div class = "col">
   <div class="form">
     <form action="/" method="post">
       <h3>Contact us here!</h3>
@@ -63,7 +64,11 @@
           <p>Submit</p>
         </button>
       </form>
-
+</div>
+</div>
+<div class = "col">
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3231.506781409163!2d-79.05609498886935!3d35.91009361725372!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89acc33ab2f92819%3A0x6514a8d8d259c2be!2sSitterson%20Hall!5e0!3m2!1sen!2sus!4v1701749160348!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+</div>
     
     <div class="container">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
