--- a/team.html
+++ b/team.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     
-<div class = "container-fluid">
+<div class = "container">
   <header class = "row">
         <div class = "container-fluid">
         <div class = "row">
