--- a/contact.html
+++ b/contact.html
@@ -42,9 +42,9 @@
     
     <div class = "row">
         <div class = "col-sm"><p>
-          NAME Lab 
-          Sitterson Hall 
-          University of North Carolina at Chapel Hill 
+          NAME Lab <br>
+          Sitterson Hall <br>
+          University of North Carolina at Chapel Hill <br>
           232 S Columbia St, Chapel Hill, NC 27514</p></div>
     </div>
 <div class = "row">
