--- a/research.html
+++ b/research.html
@@ -38,24 +38,55 @@
 
 <div class = "row"><h1 class = "text-left">Projects</h1></div>
 
-<div class = "row mb-5 mt-4">
-    <div class = "col-sm-5">img</div>
-    <div class = "col-sm">text</div>
+<div class="row mb-5 mt-4">
+  <div class="col-sm-5">img</div>
+  <div class="col-sm">
+    <p>
+      <a href="https://dl.acm.org/doi/abs/10.1145/3576882.3617928">Guiding the Development of Undergraduate Educational Robotics</a>
+      <br>2023
+    </p>
+  </div>
+</div>
+
+
+<div class = "row mb-5">
+  <div class="col-sm-5">img</div>
+  <div class="col-sm">
+    <p>
+      <a href="https://dl.acm.org/doi/full/10.1145/3597623">Virtual, Augmented, and Mixed Reality for Human-robot Interaction: A Survey and Virtual Design Element Taxonomy</a>
+      <br>2023
+    </p>
+  </div>
 </div>
 
 <div class = "row mb-5">
-    <div class = "col-sm-5">img</div>
-    <div class = "col-sm">text</div>
+  <div class="col-sm-5">img</div>
+  <div class="col-sm">
+    <p>
+      <a href="https://arxiv.org/abs/2210.04964">Generating Executable Action Plans with Environmentally-Aware Language Models</a>
+      <br>2022
+    </p>
+  </div>
 </div>
 
 <div class = "row mb-5">
-    <div class = "col-sm-5">img</div>
-    <div class = "col-sm">text</div>
+  <div class="col-sm-5">img</div>
+  <div class="col-sm">
+    <p>
+      <a href="https://ieeexplore.ieee.org/abstract/document/9889628">Predicting Positions of People in Human-Robot Conversational Groups</a>
+      <br>2022
+    </p>
+  </div>
 </div>
 
 <div class = "row">
-    <div class = "col-sm-5">img</div>
-    <div class = "col-sm">text</div>
+  <div class="col-sm-5">img</div>
+  <div class="col-sm">
+    <p>
+      <a href="https://patents.google.com/patent/US20210094180A1/en">Augmented Reality Coordination Of Human-Robot Interaction</a>
+      <br>2021
+    </p>
+  </div>
 </div>
 
 <footer>
