--- a/research.html
+++ b/research.html
@@ -39,7 +39,9 @@
 <div class = "row"><h1 class = "text-left">Projects</h1></div>
 
 <div class="row mb-5 mt-4">
-  <div class="col-sm-5">img</div>
+  <div class="col-sm-5">
+    <img src="college-lecture.jpeg" alt="Creative Commons license image of a college lecture." style="width: 80%; height: auto;">
+  </div>
   <div class="col-sm">
     <p>
       <a href="https://dl.acm.org/doi/abs/10.1145/3576882.3617928">Guiding the Development of Undergraduate Educational Robotics</a>
@@ -50,7 +52,9 @@
 
 
 <div class = "row mb-5">
-  <div class="col-sm-5">img</div>
+  <div class="col-sm-5">
+    <img src="human-robot-interaction.jpg" alt="Creative Commons license image of a woman interacting with a robot." style="width: 80%; height: auto;">
+  </div>
   <div class="col-sm">
     <p>
       <a href="https://dl.acm.org/doi/full/10.1145/3597623">Virtual, Augmented, and Mixed Reality for Human-robot Interaction: A Survey and Virtual Design Element Taxonomy</a>
