--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
         </div>
     </header>
 
-    <div class = "row"><h1 class = "text-left">Contact</h1></div>
+    <div class = "row"><h1 class = "text-center">Contact</h1></div>
     
     
     <div class = "row">
@@ -67,11 +67,11 @@
 
 <div class = "col-md-4">
   <div class = "row"> filler</div>
-  <div class = "row"><img src="sitterson_hall.jpg" alt="Sitterson Hall" class="rounded"></div>
+  <div class = "row-building"><img src="sitterson_hall.jpg" class = "img-fluid align-bottom" alt="Sitterson Hall" ></div>
 </div>
 
 <div class = "col-md-4">
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3231.506781409163!2d-79.05609498886932!3d35.91009361725372!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89acc33ab2f92819%3A0x6514a8d8d259c2be!2sSitterson%20Hall!5e0!3m2!1sen!2sus!4v1701800445968!5m2!1sen!2sus" width="400" height="700" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3231.506781409163!2d-79.05609498886932!3d35.91009361725372!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89acc33ab2f92819%3A0x6514a8d8d259c2be!2sSitterson%20Hall!5e0!3m2!1sen!2sus!4v1701800445968!5m2!1sen!2sus" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
 
 
