--- a/about.html
+++ b/about.html
@@ -13,11 +13,13 @@
     
 <div class = "grid-about">
     <header>
-        <div class = "container-fluid">
-        <div class = "row">
-        <nav class="navbar navbar-expand-sm navbar-light col-sm-12">
-            <div class="container-fluid">
-                <a class="navbar-brand me-auto" href="#">Navbar</a>
+        <div class = "container">
+    <div class = "row bg-light">
+        <div class="col-sm">
+            <nav class="navbar navbar-expand-sm navbar-light col-sm-12">
+                <div class="container-fluid">
+                    <a class="navbar-brand me-auto" href="#">
+                      <img src="Iron_logo.png" width="180" height="100" class="d-inline-block align-top"> </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo2" aria-controls="navbarTogglerDemo2" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
