--- a/team.html
+++ b/team.html
@@ -56,6 +56,7 @@
 <div class = "row"> 
   <h2 class = "mt-5 pb-3 text-center">Graduate Students</h2> 
 </div>
+<hr>
 
 <div class="row pb-5">
   <div class="col-md-3 pb-4 text-center">
@@ -94,6 +95,8 @@
   <div class = "row">
     <div class = "col-sm">
     <h2>Undergrad</h2>
+    </div>
+<hr>
       <h3>Lilly Nekervis</h3>
       <p>Undergrad</p>
     </div>
