padding, button change

--- a/team.html
+++ b/team.html
@@ -37,11 +37,10 @@
         </div>
         </div>
     </header>
-<div class = "row"><h1 class = "text-left">Meet the Team</h1></div>
-<hr>
 
 <div class = "row"> 
-  <div class = "col"><h2 class = "text-center">Lab Director</h2> 
+  <div class = "col"><h2 class = "text-left pt-3">Lab Director</h2> 
+    <hr>
 <div class="row pb-5">
   <div class="col-md-3 text-center">
     <img src="dan.jpg" style="max-width: 200px" class="rounded"></div>
@@ -54,12 +53,12 @@
 
 
 <div class = "row"> 
-  <h2 class = "mt-5 pb-3 text-center">Graduate Students</h2> 
+  <h2 class = "mt-5 pb-3 text-left">Graduate Students</h2> 
 </div>
 <hr>
 
 <div class="row pb-5">
-  <div class="col-md-3 pb-4 text-center">
+  <div class="col-md-3 pb-4 text-left">
     <img src="Maitrey_Gramopadhye.jpeg" style="max-width: 150px;" alt="" class="rounded">
 </div>
     <div class="col">
