correction on placement

--- a/team.html
+++ b/team.html
@@ -70,7 +70,7 @@
 </div>
 
 <div class="row pb-5 mt-4 pt-2">
-  <div class="col-md-3 pb-4 text-center">
+  <div class="col-md-3 pb-4 text-left">
     <img src="Nicholas_Conlon.jpg" style="max-width: 150px;" alt="" class="rounded">
 </div>
     <div class="col">
@@ -80,7 +80,7 @@
       </div>
 
 <div class="row pb-5 mt-4 pt-2">
-    <div class="col-md-3 pb-4 text-center"> <img src="Yang_Yue.jpg" style="max-width: 150px;" alt="" class="rounded"> </div>
+    <div class="col-md-3 pb-4 text-left"> <img src="Yang_Yue.jpg" style="max-width: 150px;" alt="" class="rounded"> </div>
       <div class="col">
           <h4> Yang Yue </h4>
           <p>"Yue Yang received his master degree in computer science in 2023 from Georgia Institute of Technology, and is now a Ph.D. student in computer science at the University of North Carolina at Chapel Hill. His research interests include human robot interaction, imitation learning, generative models."</p>
