changes to project page
added images and a class to stylesheet

--- a/research.html
+++ b/research.html
@@ -40,7 +40,7 @@
 
 <div class="row mb-5 mt-4">
   <div class="col-sm-5">
-    <img src="college-lecture.jpeg" alt="Creative Commons license image of a college lecture." style="width: 80%; height: auto;">
+    <img src="college-lecture.jpeg" alt="Creative Commons license image of a college lecture.">
   </div>
   <div class="col-sm">
     <p>
@@ -53,7 +53,7 @@
 
 <div class = "row mb-5">
   <div class="col-sm-5">
-    <img src="human-robot-interaction.jpg" alt="Creative Commons license image of a woman interacting with a robot." style="width: 80%; height: auto;">
+    <img src="human-robot-interaction.jpg" alt="Creative Commons license image of a woman interacting with a robot.">
   </div>
   <div class="col-sm">
     <p>
@@ -64,7 +64,9 @@
 </div>
 
 <div class = "row mb-5">
-  <div class="col-sm-5">img</div>
+  <div class="col-sm-5">
+    <img src="language-models.jpg" alt="Creative Commons license image of a collection of words on a digital display.">
+  </div>
   <div class="col-sm">
     <p>
       <a href="https://arxiv.org/abs/2210.04964">Generating Executable Action Plans with Environmentally-Aware Language Models</a>
@@ -74,7 +76,9 @@
 </div>
 
 <div class = "row mb-5">
-  <div class="col-sm-5">img</div>
+  <div class="col-sm-5">
+    <img src="human-robot-conversation-group.jpg" alt="Creative Commons license image of a woman interacting with a robot.">
+  </div>
   <div class="col-sm">
     <p>
       <a href="https://ieeexplore.ieee.org/abstract/document/9889628">Predicting Positions of People in Human-Robot Conversational Groups</a>
@@ -84,7 +88,9 @@
 </div>
 
 <div class = "row">
-  <div class="col-sm-5">img</div>
+  <div class="col-sm-5">
+    <img src="augmented-reality.jpg" alt="Creative Commons license image of an augmented reality.">
+  </div>
   <div class="col-sm">
     <p>
       <a href="https://patents.google.com/patent/US20210094180A1/en">Augmented Reality Coordination Of Human-Robot Interaction</a>
