--- a/team.html
+++ b/team.html
@@ -42,7 +42,7 @@
   <div class = "col"><h2 class = "text-left pt-3">Lab Director</h2> 
     <hr>
 <div class="row pb-5">
-  <div class="col-md-3 text-center">
+  <div class="col-md-3 text-left">
     <img src="dan.jpg" style="max-width: 200px" class="rounded"></div>
     <div class="col">
       <h4> Daniel Szafir </h4>
