--- a/team.html
+++ b/team.html
@@ -61,7 +61,7 @@
   <div class="col-md-3 pb-4 text-left">
     <img src="Maitrey_Gramopadhye.jpeg" style="max-width: 150px;" alt="" class="rounded">
 </div>
-    <div class="col">
+    <div class="col pb-4">
         <h4> Maitrey Gramopadhye </h4>
         <p>I am currently a PhD student in the Computer Science Department at the University of North Carolina at Chapel Hill. My research interests include human robot interaction and common sense reasoning in robotics. I am particularly interested in improving the robot reasoning, using Language and Vision-Language Models, to enable human robot collaboration for long-horizon tasks. Recently, I have worked on conditioning large language models on the objects present around a robot to generate situationally aware action plans. In the past I have worked on studying the zero-shot performance of vision transformers for video object segmentation and pose propagation. I have worked on Graph Machine Learning as a researcher at AI Garage, Mastercard and I'm interested in finding ways to port my experience across fields to my current and future projects. I also interned at Samsung Research Institute, Bangalore where I worked in the Computer Vision team of the Advanced Technology Lab. I completed my Bachelors in Technology in Computer Science from the Indian Institute of Technology, Bombay where I worked on my Undergraduate thesis in the field of 3D Reconstruction in Cryogenic Electron Microscopy. I also was the Software team lead for The IIT Bombay Mars Rover Team, where I worked on building rovers capable of traversing on Mars like terrain."</p>
           <a href="https://maitreygram.github.io" class="btn btn-primary btn-sm rounded-0 text-light">Website</a>
@@ -69,11 +69,12 @@
           <a href="https://github.com/maitreygram" class="btn btn-primary btn-sm rounded-0 text-light">GitHub</a>
 </div>
 
+
 <div class="row pb-5 mt-4 pt-2">
   <div class="col-md-3 pb-4 text-left">
     <img src="Nicholas_Conlon.jpg" style="max-width: 150px;" alt="" class="rounded">
 </div>
-    <div class="col">
+    <div class="col pb-4">
       <h4> Nicholas Conlon </h4>
       <p>Nick is a PhD candidate in the Department of Computer Science at the University of Colorado at Boulder. In his research, he is developing methods for intelligent agents to assess their own competencies and investigating the impacts of communicating such assessments within a human-machine team. Prior to pursuing PhD, he worked in aerospace R&D developing algorithms and software for real-world applications including Uncrewed Aerial System (UAS) mission planning, battlespace decision-support, and space situational awareness. He also served several years in the United States Army Airborne Infantry. Nick received his B.S. in Computer Science from the University of Massachusetts at Amherst (2014), and his M.S. in Computer Science from the University of Massachusetts at Lowell (2018).</p>
           <a href="https://www.linkedin.com/in/nicholas-conlon/" class="btn btn-primary btn-sm rounded-0 text-light">LinkedIn</a>
@@ -81,7 +82,7 @@
 
 <div class="row pb-5 mt-4 pt-2">
     <div class="col-md-3 pb-4 text-left"> <img src="Yang_Yue.jpg" style="max-width: 150px;" alt="" class="rounded"> </div>
-      <div class="col">
+      <div class="col pb-4">
           <h4> Yang Yue </h4>
           <p>"Yue Yang received his master degree in computer science in 2023 from Georgia Institute of Technology, and is now a Ph.D. student in computer science at the University of North Carolina at Chapel Hill. His research interests include human robot interaction, imitation learning, generative models."</p>
             <a href="https://yy-gx.github.io/" class="btn btn-primary btn-sm rounded-0 text-light">Website</a>
