--- a/team.html
+++ b/team.html
@@ -47,7 +47,7 @@
     <div class="col">
       <h4> Daniel Szafir </h4>
       <p>Dr. Daniel Szafir is an Assistant Professor in the Department of Computer Science and the ATLAS Institute at the University of Colorado, Boulder. He holds courtesy appointments in the Department of Aerospace Engineering Sciences and the Department of Information Science and is an affiliate of the CU Research and Engineering Center for Unmanned Vehicles (RECUV), the Institute of Cognitive Science (ICS), the Center for Neuroscience, and the Culture, Language, and Social Practice (CLASP) program. Dr. Szafirâ€™s research interests, which span the fields of human-robot interaction (HRI) and human-computer interaction (HCI), involve exploring how emerging interactive technologies, such as small aerial robots, wearable devices, and immersive virtual environments, may be designed to provide new forms of assistance to users in domains including collaborative work, education, and space exploration. He completed his Ph.D. in Computer Science at the University of Wisconsinâ€“Madison in 2015 and was named to the Forbes 30 Under 30: Science list in 2017. Dr. Szafirâ€™s work been featured in a variety of media outlets, including New Scientist, Engadget, and Discovery News, and his research collaborators and sponsors have included NASA, the National Science Foundation, Google, Intel, and Mitsubishi Heavy Industries.</p>
-      <a href="http://www.danszafir.com/" class="btn btn-primary btn-sm rounded-0 text-light">Website</a>
+      <a href="http://www.danszafir.com/" class="btn btn-primary btn-sm rounded-0 text-light ">Website</a>
       <a href="https://scholar.google.com/citations?user=WxmhtyMAAAAJ&amp;hl=en&amp;oi=sra" class="btn btn-primary btn-sm rounded-0 text-light">Google Scholar</a>
     </div>
 
@@ -84,10 +84,10 @@
     <div class="col-md-3 pb-4 text-left"> <img src="Yang_Yue.jpg" style="max-width: 150px;" alt="" class="rounded"> </div>
       <div class="col pb-4">
           <h4> Yang Yue </h4>
-          <p>"Yue Yang received his master degree in computer science in 2023 from Georgia Institute of Technology, and is now a Ph.D. student in computer science at the University of North Carolina at Chapel Hill. His research interests include human robot interaction, imitation learning, generative models."</p>
+          <p>Yue Yang received his master degree in computer science in 2023 from Georgia Institute of Technology, and is now a Ph.D. student in computer science at the University of North Carolina at Chapel Hill. His research interests include human robot interaction, imitation learning, generative models.</p>
             <a href="https://yy-gx.github.io/" class="btn btn-primary btn-sm rounded-0 text-light">Website</a>
             <a href="https://www.linkedin.com/in/yue-yang-6a1493185/" class="btn btn-primary btn-sm rounded-0 text-light">LinkedIn</a>
-            <a href="https://github.com/yy-gx" class="btn btn-primary btn-sm rounded-0 text-light">GitHub</a>
+            <a href="https://github.com/yy-gx" class="btn btn-primary btn-sm rounded-0 text-light ">GitHub</a>
           </div>
     </div>
   </div>
@@ -97,10 +97,16 @@
     <h2>Undergrad</h2>
     </div>
 <hr>
-      <h3>Lilly Nekervis</h3>
-      <p>Undergrad</p>
-    </div>
+<div class="row pb-5 mt-4 pt-2">
+  <div class="col-md-3 pb-4 text-left"> <img src="Lilly_Nekervis.jpeg" style="max-width: 150px;" alt="" class="rounded"> </div>
+    <div class="col pb-4">
+        <h4> LillyAnn Nekervis </h4>
+        <p>I am a Junior at the University of North Carolina at Chapel Hill, majoring in Information Sciences and actively involved in the IRON Lab. I'm currently exploring autonomous robotic systems and their integration with artificial intelligence.</p>
+          <a href="www.linkedin.com/in/nekervis" class="btn btn-primary btn-sm rounded-0 text-light">LinkedIn</a>
+          <a href="https://github.com/TigerLillyAnn" class="btn btn-primary btn-sm rounded-0 text-light ">GitHub</a>
+        </div>
   </div>
+</div>
 
 
   <div class = "row">
