--- a/team.html
+++ b/team.html
@@ -94,7 +94,7 @@
 
   <div class = "row">
     <div class = "col-sm">
-    <h2>Undergrad</h2>
+    <h2>Undergraduate Student</h2>
     </div>
 <hr>
 <div class="row pb-5 mt-4 pt-2">
