--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
     
     
     <div class = "row">
-        <div class = "col-md-4 bg-light">
+        <div class = "col-md-4">
         <div><p>If you're interested in learning more about our or interested in getting involved, please use the contact form below.</p></div>
         <div class="form">
             <form action="/" method="post">
