finished text of project page
added research descriptions and padding of images

--- a/research.html
+++ b/research.html
@@ -45,7 +45,9 @@
   <div class="col-sm">
     <p>
       <a href="https://dl.acm.org/doi/abs/10.1145/3576882.3617928">Guiding the Development of Undergraduate Educational Robotics</a>
-      <br>2023
+      <br>Bryce Ikeda, Janine Hoelscher, Ron Alterovitz, Daniel Szafir
+      <br>Proceedings of the ACM Conference on Global Computing Education
+      <br>December 2023
     </p>
   </div>
 </div>
@@ -58,7 +60,9 @@
   <div class="col-sm">
     <p>
       <a href="https://dl.acm.org/doi/full/10.1145/3597623">Virtual, Augmented, and Mixed Reality for Human-robot Interaction: A Survey and Virtual Design Element Taxonomy</a>
-      <br>2023
+      <br>Michael Walker, Thao Phung, Tathagata Chakraborti, Tom Williams, Daniel Szafir
+      <br>ACM Transactions on Human-Robot Interaction
+      <br>July 2023
     </p>
   </div>
 </div>
@@ -70,7 +74,9 @@
   <div class="col-sm">
     <p>
       <a href="https://arxiv.org/abs/2210.04964">Generating Executable Action Plans with Environmentally-Aware Language Models</a>
-      <br>2022
+      <br>Maitrey Gramopadhye and Daniel Szafir
+      <br>Cornell University
+      <br>May 2023
     </p>
   </div>
 </div>
@@ -82,7 +88,9 @@
   <div class="col-sm">
     <p>
       <a href="https://ieeexplore.ieee.org/abstract/document/9889628">Predicting Positions of People in Human-Robot Conversational Groups</a>
-      <br>2022
+      <br>Hooman Hedayati and Daniel Szafir
+      <br>17th ACM/IEEE International Conference on Human-Robot Interaction (HRI)
+      <br>March 2022
     </p>
   </div>
 </div>
@@ -94,7 +102,9 @@
   <div class="col-sm">
     <p>
       <a href="https://patents.google.com/patent/US20210094180A1/en">Augmented Reality Coordination Of Human-Robot Interaction</a>
-      <br>2021
+      <br>Daniel Szafir, Michael E. Walker, and Hooman Hedayati
+      <br>University of Colorado
+      <br>April 2021
     </p>
   </div>
 </div>
