--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
         </div>
     </header>
 
-    <div class = "row mb-4"><h1 class = "text-center">Contact</h1></div>
+    <div class = "row mb-4"><h1 class = "text-center p-4">Contact</h1></div>
     
     
     <div class = "row">
