--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </div>
 
         <div class="container">
-            <footer class="py-3 my-4 border-top">
+            <footer class="pt-4 my-4 border-top">
               <div class="text-center">
                 <span class="text-center"><p class="text-center">IRON Lab <br>
                   Sitterson Hall <br> <a href="https://www.unc.edu/">University of North Carolina at Chapel Hill</a> <br>
