--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
             <nav class="navbar navbar-expand-sm navbar-light col-sm-12">
                 <div class="container-fluid">
                     <a class="navbar-brand me-auto" href="#">
-                      <img src="Iron_logo.png" width="180" height="100" class="d-inline-block align-top"> </a>
+                      <img src="Iron_logo.png" width="auto" height="100" class="d-inline-block align-top"> </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo2" aria-controls="navbarTogglerDemo2" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
