--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav class="navbar navbar-expand-sm navbar-light col-sm-12">
             <div class="container-fluid">
                 <a class="navbar-brand me-auto" href="#">
-                  <img src="Iron_logo.png" width="180" height="100" class="d-inline-block align-top"> </a>
+                  <img src="Iron_logo.png" width="auto" height="100" class="d-inline-block align-top"> </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo2" aria-controls="navbarTogglerDemo2" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -111,7 +111,7 @@
     </div>
     
         <div class="container">
-            <footer class="pt-4 my-4 border-top">
+            <footer class="py-3 my-4 border-top">
               <div class="text-center">
                 <span class="text-center"><p class="text-center">
                   IRON Lab<br>
