remove background color

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <div class = "container">
 
-  <div class = "row bg-light">
+  <div class = "row">
     <div class="col-sm">
         <nav class="navbar navbar-expand-sm navbar-light col-sm-12">
             <div class="container-fluid">
@@ -28,7 +28,7 @@
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo2" aria-controls="navbarTogglerDemo2" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo2">
+                <div class="collapse navbar-collapse" id="navbar">
                     <ul class="navbar-nav  ms-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="research.html">Research</a></li>
