--- a/index.html
+++ b/index.html
@@ -78,36 +78,36 @@
 
     <div class = "row">
         <h2  class="text-center mt-4 mb-3">Recent News</h2>
+        <div class = "col-sm mb-3">
+            <div class="card mx-auto" style="width: 18rem;">
+                <img class="card-im g-top" src="college-lecture.jpeg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Guiding the Development of Undergraduate Education Robotics</h5>
+                  <p class="card-text">Proceedings of the ACM Conference on Global Computing Education</p>
+                  <a href="https://dl.acm.org/doi/abs/10.1145/3576882.3617928" class="btn btn-primary">Read it here</a>
+                </div>
+              </div>
+        </div>
+        <div class = "col-sm mb-3">
+            <div class="card mx-auto" style="width: 18rem;">
+                <img class="card-img-top" src="human-robot-interaction.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Virtual, Augmented, and Mixed Reality for Human-robot Interaction: A Survey and Virtual Design Element Taxonomy</h5>
+                  <p class="card-text">ACM Transactions on Human-Robot Interaction</p>
+                  <a href="#" class="btn btn-primary">Read it here</a>
+                </div>
+              </div>
+        </div>
         <div class = "col-sm mb-3 mt-2">
-            <div class="card mx-auto" style="width: 18rem;">
-                <img class="card-img-top" src="..." alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
+          <div class="card mx-auto" style="width: 18rem;">
+              <img class="card-img-top" src="human-robot-conversation-group.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Predicting Positions of People in Human-Robot Conversational Groups</h5>
+                <p class="card-text">17th ACM/IEEE International Conference on Human-Robot Interaction (HRI)</p>
+                <a href="#" class="btn btn-primary">Read it here</a>
               </div>
-        </div>
-        <div class = "col-sm mb-3">
-            <div class="card mx-auto" style="width: 18rem;">
-                <img class="card-im g-top" src="..." alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-        </div>
-        <div class = "col-sm mb-3">
-            <div class="card mx-auto" style="width: 18rem;">
-                <img class="card-img-top" src="..." alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-        </div>
+            </div>
+      </div>
     </div>
     
         <div class="container">
