another project page update!
:D

--- a/research.html
+++ b/research.html
@@ -45,10 +45,11 @@
   </div>
   <div class="col-sm">
     <p>
-      <a href="https://dl.acm.org/doi/abs/10.1145/3576882.3617928">Guiding the Development of Undergraduate Educational Robotics</a>
+      Guiding the Development of Undergraduate Educational Robotics
       <br>Bryce Ikeda, Janine Hoelscher, Ron Alterovitz, Daniel Szafir
       <br>Proceedings of the ACM Conference on Global Computing Education
       <br>December 2023
+      <br><a href="guiding_the_dev_pdf.pdf" class="btn btn-primary btn-sm rounded-0 text-light">PDF</a>
     </p>
   </div>
 </div>
@@ -60,10 +61,11 @@
   </div>
   <div class="col-sm">
     <p>
-      <a href="https://dl.acm.org/doi/full/10.1145/3597623">Virtual, Augmented, and Mixed Reality for Human-robot Interaction: A Survey and Virtual Design Element Taxonomy</a>
+      Virtual, Augmented, and Mixed Reality for Human-robot Interaction: A Survey and Virtual Design Element Taxonomy
       <br>Michael Walker, Thao Phung, Tathagata Chakraborti, Tom Williams, Daniel Szafir
       <br>ACM Transactions on Human-Robot Interaction
       <br>July 2023
+      <br><a href="virtual-augmented_pdf" class="btn btn-primary btn-sm rounded-0 text-light">PDF</a>
     </p>
   </div>
 </div>
@@ -74,10 +76,11 @@
   </div>
   <div class="col-sm">
     <p>
-      <a href="https://arxiv.org/abs/2210.04964">Generating Executable Action Plans with Environmentally-Aware Language Models</a>
+      Generating Executable Action Plans with Environmentally-Aware Language Models
       <br>Maitrey Gramopadhye and Daniel Szafir
       <br>Cornell University
       <br>May 2023
+      <br><a href="generating-exec_pdf.pdf" class="btn btn-primary btn-sm rounded-0 text-light">PDF</a>
     </p>
   </div>
 </div>
@@ -88,10 +91,11 @@
   </div>
   <div class="col-sm">
     <p>
-      <a href="https://ieeexplore.ieee.org/abstract/document/9889628">Predicting Positions of People in Human-Robot Conversational Groups</a>
+      Predicting Positions of People in Human-Robot Conversational Groups
       <br>Hooman Hedayati and Daniel Szafir
       <br>17th ACM/IEEE International Conference on Human-Robot Interaction (HRI)
       <br>March 2022
+      <br><a href="predicting_positions_pdf.pdf" class="btn btn-primary btn-sm rounded-0 text-light">PDF</a>
     </p>
   </div>
 </div>
@@ -102,10 +106,11 @@
   </div>
   <div class="col-sm">
     <p>
-      <a href="https://patents.google.com/patent/US20210094180A1/en">Augmented Reality Coordination Of Human-Robot Interaction</a>
+      Augmented Reality Coordination Of Human-Robot Interaction
       <br>Daniel Szafir, Michael E. Walker, and Hooman Hedayati
       <br>University of Colorado
       <br>April 2021
+      <br><a href="augmented_reality_pdf.pdf" class="btn btn-primary btn-sm rounded-0 text-light">PDF</a>
     </p>
   </div>
 </div>
