--- a/research.html
+++ b/research.html
@@ -37,7 +37,7 @@
     </div>
 </header>
 
-<div class = "row"><h1 class = "text-left">Current Research</h1></div>
+<div class = "row"><h1 class = "text-left p-4">Current Research</h1></div>
 
 <div class="row mb-5 mt-4">
   <div class="col-sm-5">
