--- a/team.html
+++ b/team.html
@@ -112,7 +112,9 @@
   <div class = "row">
     <h2 class = "text-center mt-3">Past Members</h2>
     <div  class = "row">
-        <div class = "col">img</div>
+        <div class = "col"> 
+          <img src="otterheadshot.jpg">
+        </div>
         <div class = "col">bio</div>
     <div  class = "row">
       <div class = "col">img</div>
