--- a/team.html
+++ b/team.html
@@ -110,25 +110,27 @@
 
 
   <div class = "row">
-    <h2 class = "text-center mt-3">Past Members</h2>
-    <div  class = "row">
-        <div class = "col"> 
-          <img src="otterheadshot.jpg">
-        </div>
-        <div class = "col">bio</div>
-    <div  class = "row">
-      <div class = "col">img</div>
-      <div class = "col">bio</div>
-    </div>
-    <div  class = "row">
-      <div class = "col">img</div>
-      <div class = "col">bio</div>
-    </div>
-    <div  class = "row">
-      <div class = "col">img</div>
-        <div class = "col">bio</div>
-    </div>
+    <h2 class = "text-left pb-4">Past Members</h2>
   </div>
+  <hr>
+  
+  <div  class = "row p-2">
+        <div class = "col"> <img src="otter_headshot.jpg" style="max-width: 100px;" alt="" class="rounded"> </div>
+        <div class = "col">They're semi-aquatic mammals</div>
+  </div>
+  <div  class = "row p-2">
+      <div class = "col"> <img src="otter_headshot.jpg" style="max-width: 100px;" alt="" class="rounded"> </div>
+      <div class = "col">They're not picky eaters</div>
+  </div>
+  <div  class = "row p-2">
+      <div class = "col"> <img src="otter_headshot.jpg" style="max-width: 100px;" alt="" class="rounded"> </div>
+      <div class = "col">They're perfect little predators</div>
+  </div>
+  <div  class = "row p-2">
+      <div class = "col"> <img src="otter_headshot.jpg" style="max-width: 100px;" alt="" class="rounded"> </div>
+        <div class = "col">They'll steal your heart</div>
+  </div>
+  
 
 
 
