--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 <div class = "grid-about">
     <header>
         <div class = "container">
-    <div class = "row bg-light">
+    <div class = "row">
         <div class="col-sm">
             <nav class="navbar navbar-expand-sm navbar-light col-sm-12">
                 <div class="container-fluid">
