--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <div  class = "container">
     <header>
         <div class = "container-fluid">
-    <div class = "row bg-light">
+    <div class = "row">
         <div class="col-sm">
             <nav class="navbar navbar-expand-sm navbar-light col-sm-12">
                 <div class="container-fluid">
