--- a/research.html
+++ b/research.html
@@ -14,7 +14,7 @@
 
 <div class = "container">
 <header>
-  <div class = "row bg-light">
+  <div class = "row">
     <div class="col-sm">
         <nav class="navbar navbar-expand-sm navbar-light col-sm-12">
             <div class="container-fluid">
