--- a/team.html
+++ b/team.html
@@ -15,7 +15,7 @@
     
 <div class = "container">
   <header class = "row">
-    <div class = "row bg-light">
+    <div class = "row">
       <div class="col-sm">
           <nav class="navbar navbar-expand-sm navbar-light col-sm-12">
               <div class="container-fluid">
