--- a/research.html
+++ b/research.html
@@ -44,76 +44,75 @@
     <img src="college-lecture.jpeg" alt="Creative Commons license image of a college lecture.">
   </div>
   <div class="col-sm">
-    <p>
-      Guiding the Development of Undergraduate Educational Robotics
-      <br>Bryce Ikeda, Janine Hoelscher, Ron Alterovitz, Daniel Szafir
+      <h4>Guiding the Development of Undergraduate Educational Robotics</h4>
+      <p><br>Bryce Ikeda, Janine Hoelscher, Ron Alterovitz, Daniel Szafir
       <br>Proceedings of the ACM Conference on Global Computing Education
-      <br>December 2023
+      <br>December 2023 
       <br><a href="guiding_the_dev_pdf.pdf" class="btn btn-primary btn-sm rounded-0 text-light">PDF</a>
     </p>
   </div>
 </div>
-
+<hr>
 
 <div class = "row mb-5">
   <div class="col-sm-5">
     <img src="human-robot-interaction.jpg" alt="Creative Commons license image of a woman interacting with a robot.">
   </div>
   <div class="col-sm">
-    <p>
-      Virtual, Augmented, and Mixed Reality for Human-robot Interaction: A Survey and Virtual Design Element Taxonomy
-      <br>Michael Walker, Thao Phung, Tathagata Chakraborti, Tom Williams, Daniel Szafir
+      <h4>Virtual, Augmented, and Mixed Reality for Human-robot Interaction: A Survey and Virtual Design Element Taxonomy</h4>
+      <p><br>Michael Walker, Thao Phung, Tathagata Chakraborti, Tom Williams, Daniel Szafir
       <br>ACM Transactions on Human-Robot Interaction
       <br>July 2023
       <br><a href="virtual-augmented_pdf" class="btn btn-primary btn-sm rounded-0 text-light">PDF</a>
     </p>
   </div>
 </div>
+<hr>
 
 <div class = "row mb-5">
   <div class="col-sm-5">
     <img src="language-models.jpg" alt="Creative Commons license image of a collection of words on a digital display.">
   </div>
   <div class="col-sm">
-    <p>
-      Generating Executable Action Plans with Environmentally-Aware Language Models
-      <br>Maitrey Gramopadhye and Daniel Szafir
+      <h4>Generating Executable Action Plans with Environmentally-Aware Language Models</h4>
+      <p><br>Maitrey Gramopadhye and Daniel Szafir
       <br>Cornell University
       <br>May 2023
       <br><a href="generating-exec_pdf.pdf" class="btn btn-primary btn-sm rounded-0 text-light">PDF</a>
     </p>
   </div>
 </div>
+<hr>
 
 <div class = "row mb-5">
   <div class="col-sm-5">
     <img src="human-robot-conversation-group.jpg" alt="Creative Commons license image of a woman interacting with a robot.">
   </div>
   <div class="col-sm">
-    <p>
-      Predicting Positions of People in Human-Robot Conversational Groups
-      <br>Hooman Hedayati and Daniel Szafir
+      <h4>Predicting Positions of People in Human-Robot Conversational Groups</h4>
+      <p><br>Hooman Hedayati and Daniel Szafir
       <br>17th ACM/IEEE International Conference on Human-Robot Interaction (HRI)
       <br>March 2022
       <br><a href="predicting_positions_pdf.pdf" class="btn btn-primary btn-sm rounded-0 text-light">PDF</a>
     </p>
   </div>
 </div>
+<hr>
 
 <div class = "row">
   <div class="col-sm-5">
     <img src="augmented-reality.jpg" alt="Creative Commons license image of an augmented reality.">
   </div>
   <div class="col-sm">
-    <p>
-      Augmented Reality Coordination Of Human-Robot Interaction
-      <br>Daniel Szafir, Michael E. Walker, and Hooman Hedayati
+      <h4>Augmented Reality Coordination Of Human-Robot Interaction</h4>
+      <p><br>Daniel Szafir, Michael E. Walker, and Hooman Hedayati
       <br>University of Colorado
       <br>April 2021
       <br><a href="augmented_reality_pdf.pdf" class="btn btn-primary btn-sm rounded-0 text-light">PDF</a>
     </p>
   </div>
 </div>
+<hr>
 
 <div class="container">
   <footer class="pt-4 my-4 border-top">
@@ -124,6 +123,7 @@
     </div>
   </footer>
 </div>
+<hr>
 
 </div>
 
